--- a/src/components/Story/Story.css
+++ b/src/components/Story/Story.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.adopt-text {
+  font-size: 40px;
+}
+
 .name-form {
   display: flex;
   flex-direction: column;
